plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithComposeCompilerCheckers/PropertyWithInitializer.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/compose_fake_plugin.jar
// FILE: main.kt
// ALLOW_ERRORS
import androidx.compose.runtime.Composable

val <!HIGHLIGHTING("severity='ERROR'; descr='[COMPOSABLE_PROPERTY_BACKING_FIELD]'")!>bar<!>: Int = 123
    @Composable get() = field
